# reloci

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: flake8.yml  tests.yml  unittests.yml
demo/: Makefile
demo/source/: APS_003129.MOV  IMG_1711.HEIC  IMG_7074.MOV  IMG_9895.MOV
reloci/: check_interval.py  cli.py  file_info.py  planner.py  renamer.py  worker.py
tests/: test_cli.py  test_file_info.py  test_planner.py  test_renamer.py  test_worker.py
