[metadata]
name = reloci
version = 1.0.0
url = https://github.com/153957/reloci/
author = Arne de Laat
author_email = arne@delaat.net
maintainer = Arne de Laat
maintainer_email = arne@delaat.net
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
license = MIT
description = Organize photos based on exif
long_description = file: README.md
keywords =
    photos
    exif
    date
    directories
    organize

[options]
packages =
    reloci
install_requires =
    exifreader

[options.extras_require]
test =
    flake8
    flake8-isort

[options.entry_points]
console_scripts =
    reloci = reloci.cli:cli

[flake8]
ignore =
    W503
    E501

[isort]
line_length = 120
multi_line_output = 4
sections =
    FUTURE
    STDLIB
    THIRDPARTY
    FIRSTPARTY
    LOCALFOLDER
lines_between_types = 1
