[metadata]
name = reloci
version = 4
url = https://github.com/153957/reloci/
author = Arne de Laat
author_email = arne@delaat.net
maintainer = Arne de Laat
maintainer_email = arne@delaat.net
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Desktop Environment :: File Managers
license = MIT
license_file = LICENSE
description = Organize photos based on exif
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    photos
    exif
    date
    directories
    organize

[options]
packages =
    reloci
install_requires =
    pyexiftool
    python-baseconv
    rich
    tqdm

[options.extras_require]
dev =
    build
    coverage
    flake8
    flake8-isort
    mypy
    twine

[options.entry_points]
console_scripts =
    reloci = reloci.cli:reloci
    reloci_info = reloci.cli:info

[options.package_data]
reloci = py_typed

[flake8]
ignore =
    W503
    E501

[isort]
line_length = 120
lines_between_types = 1
multi_line_output = 3
sections =
    FUTURE
    STDLIB
    THIRDPARTY
    FIRSTPARTY
    LOCALFOLDER

[coverage:run]
branch = true
source =
    reloci
    tests

[mypy]
warn_return_any = True
warn_unused_configs = True
show_column_numbers = True
show_error_codes = True
strict = True
ignore_missing_imports = True
